logs/dag_id=ltv-pipeline/run_id=manual__2022-08-11T19:44:47.198772+00:00/task_id=transformation/attempt=1.log
[2022-08-11 19:45:20,056] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: ltv-pipeline.transformation manual__2022-08-11T19:44:47.198772+00:00 [queued]>
[2022-08-11 19:45:20,065] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: ltv-pipeline.transformation manual__2022-08-11T19:44:47.198772+00:00 [queued]>
[2022-08-11 19:45:20,067] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-08-11 19:45:20,068] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-08-11 19:45:20,070] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-08-11 19:45:20,079] {taskinstance.py:1397} INFO - Executing <Task(PythonOperator): transformation> on 2022-08-11 19:44:47.198772+00:00
[2022-08-11 19:45:20,085] {standard_task_runner.py:52} INFO - Started process 125 to run task
[2022-08-11 19:45:20,088] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'ltv-pipeline', 'transformation', 'manual__2022-08-11T19:44:47.198772+00:00', '--job-id', '315', '--raw', '--subdir', 'DAGS_FOLDER/dag-test.py', '--cfg-path', '/tmp/tmpccobuz_y', '--error-file', '/tmp/tmp30sgcyu2']
[2022-08-11 19:45:20,091] {standard_task_runner.py:80} INFO - Job 315: Subtask transformation
[2022-08-11 19:45:20,149] {task_command.py:371} INFO - Running <TaskInstance: ltv-pipeline.transformation manual__2022-08-11T19:44:47.198772+00:00 [running]> on host f961364be009
[2022-08-11 19:45:20,200] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=ltv-pipeline
AIRFLOW_CTX_TASK_ID=transformation
AIRFLOW_CTX_EXECUTION_DATE=2022-08-11T19:44:47.198772+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-08-11T19:44:47.198772+00:00
[2022-08-11 19:45:20,212] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-08-11 19:45:20,217] {dbapi.py:231} INFO - Running statement: ALTER TABLE vehicles ADD COLUMN miles_range  VARCHAR;, parameters: None
[2022-08-11 19:45:21,247] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-08-11 19:45:21,254] {dbapi.py:231} INFO - Running statement: UPDATE vehicles SET miles_range = CASE WHEN miles = 0 THEN 'new' WHEN miles >0 and miles <=3000  THEN 'semi-new' ELSE 'used' END;, parameters: None
[2022-08-11 19:45:22,645] {dbapi.py:239} INFO - Rows affected: 499998
[2022-08-11 19:45:22,693] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-08-11 19:45:22,868] {logging_mixin.py:115} INFO -                 0         1       2
miles_range   new  semi-new    used
count        4746     24761  470491
[2022-08-11 19:45:22,875] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-08-11 19:45:22,879] {dbapi.py:231} INFO - Running statement: 
                ALTER TABLE vehicles ADD COLUMN new_fuel_type  VARCHAR;

                UPDATE vehicles 
                SET new_fuel_type =
                CASE WHEN fuel_type in ('E85 / Unleaded','Unleaded','Premium Unleaded',
                'Premium Unleaded; Unleaded','Premium Unleaded / Unleaded',
                'Unleaded; Unleaded / E85','Unleaded / E85','E85 / Premium Unleaded',
                'Premium Unleaded; Premium Unleaded / E85','Premium Unleaded / Unleaded; Unleaded') THEN 'gasoline'
				WHEN fuel_type in ('Electric / Premium Unleaded','Unleaded / Electric','Electric / Unleaded',
                'Premium Unleaded / Natural Gas','Unleaded; Unleaded / Natural Gas'
                'Compressed Natural Gas; Unleaded','Electric / Premium Unleaded; Electric / Unleaded') THEN 'hybrid'
				WHEN fuel_type in ('Diesel','Diesel; Unleaded') THEN 'diesel'
				WHEN fuel_type in ('Compressed Natural Gas') THEN 'gas'
				WHEN fuel_type in ('Electric','Electric / Hydrogen') then 'electric'
				ELSE NULL END as new_fuel_type;
                , parameters: None
[2022-08-11 19:45:22,882] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dag-test.py", line 206, in _transformations
    post_hook.run(new_fuel_query)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "as"
LINE 16:     ELSE NULL END as new_fuel_type;
                           ^

[2022-08-11 19:45:22,899] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=ltv-pipeline, task_id=transformation, execution_date=20220811T194447, start_date=20220811T194520, end_date=20220811T194522
[2022-08-11 19:45:22,914] {standard_task_runner.py:97} ERROR - Failed to execute job 315 for task transformation (syntax error at or near "as"
LINE 16:     ELSE NULL END as new_fuel_type;
                           ^
; 125)
[2022-08-11 19:45:22,963] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-11 19:45:23,003] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
